# Whale-Movement-Based-Price-Direction-Generator-V2

./: README.md
WhalesIntent/: .env  .gitignore  main.py  pyproject.toml
WhalesIntent/Intent/: NoteBook.ipynb  dune_data_cache.json  dune_intent_cache.json  dune_whales_cache.json  market_intent_ml_ready.csv  merged_ml_dataset.csv  whale_ml_ready.csv  whale_prices_ml_ready.csv
WhalesIntent/Intent/data/price_cache/: btc.csv  eth.csv
